--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -128,19 +128,6 @@
                         <wm-panel iconclass="wi wi-building" name="panelMyMunicipalities" title="My Municipalities">
                             <wm-panel-footer name="panel_footer4"></wm-panel-footer>
                             <wm-layoutgrid name="layoutgrid5_2">
-                                <wm-gridrow name="gridrow20_1">
-                                    <wm-gridcolumn columnwidth="8" name="gridcolumn23_1">
-                                        <wm-composite name="composite13">
-                                            <wm-label class="col-md-3 control-label" name="label14_1" caption="Search Municipalities"></wm-label>
-                                            <wm-container class="col-md-9" name="container13">
-                                                <wm-search name="textSearchMunicipalities" dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="email" displaylabel="municipalityName" displayimagesrc="logo" datafield="All Fields"></wm-search>
-                                            </wm-container>
-                                        </wm-composite>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn26_1" horizontalalign="center">
-                                        <wm-button class="btn-primary" caption="Add Municipality" type="button" margin="unset 0.5em" name="buttonAddMunicipality" iconclass="wi wi-add" on-click="buttonAddMunicipalityClick($event, $scope)"></wm-button>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
                                 <wm-gridrow name="gridrow21_1" padding="2em unset">
                                     <wm-gridcolumn columnwidth="3" name="gridcolumn25_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn27_2">
@@ -169,9 +156,20 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="3" name="gridcolumn28_1"></wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow22_3">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn27_1" horizontalalign="right">
-                                        <wm-button caption="Update" type="submit" class="btn-primary" name="buttonUpdateSubscriptions" on-click="buttonUpdateSubscriptionsClick($event, $scope)"></wm-button>
+                                <wm-gridrow name="gridrow25">
+                                    <wm-gridcolumn columnwidth="8" name="gridcolumn33_1">
+                                        <wm-composite name="composite14">
+                                            <wm-label class="col-md-3 form-control-static" caption="Search Municipalities" name="label18"></wm-label>
+                                            <wm-container class="col-md-9" name="container14">
+                                                <wm-select dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="email" displaylabel="municipalityName" displayimagesrc="logo" datafield="All Fields" name="search2" placeholder="Select Muncipality" displayfield="municipalityName"></wm-select>
+                                            </wm-container>
+                                        </wm-composite>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn34_1" horizontalalign="center">
+                                        <wm-button class="btn-primary" caption="ADD" type="button" margin="unset 0.5em" iconclass="wi wi-add" on-click="buttonAddMunicipalityClick($event, $scope)" name="button10" width="50%"></wm-button>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn33_2" horizontalalign="center">
+                                        <wm-button caption="SAVE" type="submit" class="btn-primary" on-click="buttonUpdateSubscriptionsClick($event, $scope)" name="button10_1" width="50%"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
